[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/scripts/jobs/toiletPaper.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/defaultFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/jobs/toiletPaper/toiletPaper.png" type="Texture" id=3]
[ext_resource path="res://assets/jobs/toiletPaper/roll.png" type="Texture" id=4]
[ext_resource path="res://assets/jobs/toiletPaper/background.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[node name="CircuitBreakers" type="TextureRect"]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 5 )
stretch_mode = 1
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 16.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Replace Toilet Paper"
align = 1
valign = 1

[node name="freshBatterySlot" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 466.0
margin_top = 129.0
margin_right = 610.0
margin_bottom = 209.0
texture = ExtResource( 3 )
expand = true

[node name="deadBatterySlot" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 30.0
margin_top = 129.0
margin_right = 174.0
margin_bottom = 209.0
texture = ExtResource( 4 )
expand = true

[node name="deadBattery" type="TextureButton" parent="."]
margin_left = 235.0
margin_top = 129.0
margin_right = 379.0
margin_bottom = 209.0
texture_normal = ExtResource( 4 )
expand = true

[node name="freshBattery" type="TextureButton" parent="."]
margin_left = 466.0
margin_top = 129.0
margin_right = 610.0
margin_bottom = 209.0
texture_normal = ExtResource( 3 )
expand = true

[connection signal="pressed" from="deadBattery" to="." method="_dead_battery_clicked"]
[connection signal="pressed" from="freshBattery" to="." method="_fresh_battery_clicked"]
